--- a/project3.html
+++ b/project3.html
@@ -138,9 +138,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_5szpgfto9i_e&adgrpid=155259813593&hvpone=&hvptwo=&hvadid=674893540034&hvpos=&hvnetw=g&hvrand=14831286698810202130&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9147349&hvtargid=kwd-64107830&hydadcr=14452_2316413&gad_source=1">Home</a></li>
+                <li><a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_5szpgfto9i_e&adgrpid=155259813593&hvpone=&hvptwo=&hvadid=674893540034&hvpos=&hvnetw=g&hvrand=14831286698810202130&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9147349&hvtargid=kwd-64107830&hydadcr=14452_2316413&gad_source=1">Shop</a></li>
+                <li><a href="https://www.amazon.in/?&tag=googhydrabk1-21&ref=pd_sl_5szpgfto9i_e&adgrpid=155259813593&hvpone=&hvptwo=&hvadid=674893540034&hvpos=&hvnetw=g&hvrand=14831286698810202130&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9147349&hvtargid=kwd-64107830&hydadcr=14452_2316413&gad_source=1">Contact</a></li>
             </ul>
         </nav>
     </header><br>
